--- a/app/src/main/res/layout/fragment_first_list.xml
+++ b/app/src/main/res/layout/fragment_first_list.xml
@@ -34,6 +34,8 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         android:id="@+id/recyclerViewList"
         android:layout_width="0dp"
         android:layout_height="0dp"
