Se agrega botón para enviar mail a fragment_second_detail.xml y se implementa su función.

--- a/app/src/main/res/layout/fragment_second_detail.xml
+++ b/app/src/main/res/layout/fragment_second_detail.xml
@@ -103,4 +103,15 @@
         app:layout_constraintEnd_toEndOf="@+id/tvDetailLastPrice"
         app:layout_constraintStart_toStartOf="@+id/tvDetailLastPrice"
         app:layout_constraintTop_toBottomOf="@+id/tvDetailLastPrice" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingBtnMail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:clickable="true"
+        android:src="@drawable/baseline_email_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
