--- a/app/src/main/res/layout/fragment_first_list.xml
+++ b/app/src/main/res/layout/fragment_first_list.xml
@@ -34,15 +34,14 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
         android:id="@+id/recyclerViewList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="#00BCD4"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/cvTitle"
+        app:spanCount="2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
