--- a/app/src/main/res/layout/fragment_first_list.xml
+++ b/app/src/main/res/layout/fragment_first_list.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="@string/phone_title"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
