--- a/app/src/main/res/layout/fragment_second_detail.xml
+++ b/app/src/main/res/layout/fragment_second_detail.xml
@@ -207,14 +207,11 @@
                             android:id="@+id/imageDetail"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            android:backgroundTint="@color/divider_color"
-                            android:src="@drawable/ic_launcher_foreground"
+                            android:src="@drawable/image_not_available"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
