Se agregan descripciones a componentes y mas strings.xml

--- a/app/src/main/res/layout/fragment_second_detail.xml
+++ b/app/src/main/res/layout/fragment_second_detail.xml
@@ -16,11 +16,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
+        android:contentDescription="@string/floating_btn"
         android:src="@drawable/baseline_email_24"
         app:backgroundTint="@color/accent_color"
-        app:tint="@color/text_icons"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/text_icons" />
 
     <ScrollView
         android:id="@+id/scrollViewDetail"
@@ -48,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="32dp"
+                    android:contentDescription="@string/credit_description"
                     app:cardCornerRadius="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/cvDescription"
@@ -94,6 +96,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:contentDescription="@string/description_description"
                     app:cardCornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="@+id/cvPrice"
                     app:layout_constraintStart_toStartOf="@+id/cvPrice"
@@ -131,6 +134,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
+                    android:contentDescription="@string/price_description"
                     app:cardCornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -193,6 +197,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/white"
+                    android:contentDescription="@string/image_description"
                     app:cardCornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -227,6 +232,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:backgroundTint="@color/primary_color"
+        android:contentDescription="@string/name_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
