--- a/app/src/main/res/layout/fragment_first_list.xml
+++ b/app/src/main/res/layout/fragment_first_list.xml
@@ -13,6 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/primary_color"
+        android:contentDescription="@string/name_store"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
