--- a/app/src/main/res/layout/fragment_second_detail.xml
+++ b/app/src/main/res/layout/fragment_second_detail.xml
@@ -111,15 +111,23 @@
                             android:id="@+id/tvDetailDescription"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="4dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="4dp"
                             android:gravity="center"
-                            android:text="@string/description"
-                            android:textAlignment="center"
+                            android:text="@string/description_content"
+                            android:textAlignment="textStart"
                             android:textColor="@color/primary_text"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="@+id/tvDescriptionTitle"
+                            app:layout_constraintStart_toStartOf="@+id/tvDescriptionTitle"
+                            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />
+
+                        <TextView
+                            android:id="@+id/tvDescriptionTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/description"
+                            android:textColor="@color/primary_text"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
